@@ -42,6 +42,16 @@
       <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>9.0.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>18.0.2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -53,6 +63,10 @@
         <configuration>
           <source>17</source>
           <target>17</target>
+          <debug>true</debug>
+          <compilerArgs>
+            <arg>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
@@ -79,6 +93,12 @@
         <version>3.0.0-M6</version>
       </plugin>
     </plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
   </build>
 
 </project>
